Add large files

--- a/notebooks/3_plant_chemical_similarity.ipynb
+++ b/notebooks/3_plant_chemical_similarity.ipynb
@@ -89,7 +89,8 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv(\n",
-    "    f'{DATA_DIR}/plant_chemical_associations.tsv',\n",
+    "    f'{DATA_DIR}/plant_chemical_associations.tsv.zip',\n",
+    "    compression='zip',\n",
     "    sep='\\t',\n",
     "    usecols=[\n",
     "        'plant_curie',\n",
@@ -175,8 +176,9 @@
    "outputs": [],
    "source": [
     "smiles_df = pd.read_csv(\n",
-    "    '../data/mapping/smiles.tsv',\n",
+    "    '../data/mapping/smiles.tsv.zip',\n",
     "    sep='\\t',\n",
+    "    compression='zip',\n",
     ")"
    ]
   },
