--- a/notebooks/2_plant_disease_similarity.ipynb
+++ b/notebooks/2_plant_disease_similarity.ipynb
@@ -617,7 +617,7 @@
     "lit_baseline_similarity, lit_outdated_ids = calculate_baseline_overlap(\n",
     "    all_plants=plant_lit_ids,\n",
     "    family_taxonomy=family_to_species_lit,  # family to species\n",
-    "    species_to_disease_dict=disease_literature_non_binary_dict, # plant(s) -> chemical ids,\n",
+    "    species_to_disease_dict=disease_literature_non_binary_dict,\n",
     ")"
    ]
   },
@@ -634,7 +634,7 @@
     "db_baseline_similarity, db_outdated_ids = calculate_baseline_overlap(\n",
     "    all_plants=plant_db_ids,\n",
     "    family_taxonomy=family_to_species_db,  # family to species\n",
-    "    species_to_disease_dict=disease_db_non_binary_dict, # plant(s) -> chemical ids\n",
+    "    species_to_disease_dict=disease_db_non_binary_dict,\n",
     ")"
    ]
   },
