--- a/notebooks/2_plant_disease_similarity.ipynb
+++ b/notebooks/2_plant_disease_similarity.ipynb
@@ -682,20 +682,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# lit_merged_df.to_csv(f'{DATA_DIR}/literature_based_correlation_data.tsv', sep='\\t', index=False)"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# lit_merged_df.to_csv(f'{DATA_DIR}/literature_based_correlation_data.tsv', sep='\\t', index=False)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df_merged_df = pd.concat([\n",
@@ -703,43 +707,40 @@
     "    db_family_similarity,\n",
     "    db_baseline_similarity,\n",
     "])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# df_merged_df.to_csv(f'{DATA_DIR}/database_based_correlation_data.tsv', sep='\\t', index=False)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Plant-plant pair counts"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "### Plant-plant pair counts"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "lit_genus_pairs = lit_merged_df[lit_merged_df['pair_type'] == 'Same genus']\n",
@@ -755,17 +756,16 @@
     "\n",
     "genus_pairs = lit_gpairs.union(db_gpairs)\n",
     "len(genus_pairs), len(lit_gpairs), len(db_gpairs)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "lit_fam_pairs = lit_merged_df[lit_merged_df['pair_type'] == 'Same family']\n",
@@ -781,13 +781,7 @@
     "\n",
     "fam_pairs = lit_fpairs.union(db_fpairs)\n",
     "len(fam_pairs), len(lit_fpairs), len(db_fpairs)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -867,10 +861,10 @@
     "suptitle = plt.suptitle(\n",
     "    'Indication area similarity between \\ntaxonomically-close and distant medicinal plants',\n",
     "    y=0.99,\n",
-    "    fontweight='bold'\n",
+    "    fontweight='bold',\n",
     ")\n",
     "\n",
-    "pt.RainCloud(\n",
+    "sns.violinplot(\n",
     "    data=lit_merged_df,\n",
     "    x='pair_type',\n",
     "    y='pearson_coefficient',\n",
@@ -903,7 +897,7 @@
     "ax1.set_xlabel(\"\")\n",
     "ax1.set_title(\"A) Scientific literature\", y=1.02)\n",
     "\n",
-    "pt.RainCloud(\n",
+    "sns.violinplot(\n",
     "    data=df_merged_df,\n",
     "    x='pair_type',\n",
     "    y='pearson_coefficient',\n",
