Add correlation data

--- a/notebooks/2_plant_disease_similarity.ipynb
+++ b/notebooks/2_plant_disease_similarity.ipynb
@@ -690,7 +690,12 @@
    },
    "outputs": [],
    "source": [
-    "# lit_merged_df.to_csv(f'{DATA_DIR}/literature_based_correlation_data.tsv', sep='\\t', index=False)"
+    "lit_merged_df.to_csv(\n",
+    "    f'{DATA_DIR}/literature_based_correlation_data.tsv.gz',\n",
+    "    sep='\\t',\n",
+    "    index=False,\n",
+    "    compression='gzip',\n",
+    ")"
    ]
   },
   {
@@ -720,7 +725,12 @@
    },
    "outputs": [],
    "source": [
-    "# df_merged_df.to_csv(f'{DATA_DIR}/database_based_correlation_data.tsv', sep='\\t', index=False)"
+    "df_merged_df.to_csv(\n",
+    "    f'{DATA_DIR}/database_based_correlation_data.tsv.gz',\n",
+    "    sep='\\t',\n",
+    "    index=False,\n",
+    "    compression='gzip',\n",
+    ")\n"
    ]
   },
   {
