update notebook name

--- a/notebooks/2_4_geodatabase_overlap.ipynb
+++ b/notebooks/2_4_geodatabase_overlap.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c67e6d48",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "# Overview on the ecological data resource\n",
+    "\n",
+    "### Import modules"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "c6c82881",
@@ -8,12 +22,25 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import json"
+    "import json\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib_venn import venn3_unweighted"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "502fba48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "c095b900",
    "metadata": {},
    "outputs": [],
@@ -23,28 +50,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f7a6ec8e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_DIR = '../data'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "4477e339",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ncbi_ids_trefle = json.load(open(f'{DATA_DIR}/mapping/trefle_grounding.json'))\n",
-    "ncbi_ids_try = json.load(open(f'{DATA_DIR}/mapping/trefle_grounding.json'))"
+    "DATA_DIR = '../data'\n",
+    "MAPPING_DIR = '../data/mapping'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "4477e339",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ncbi_ids_trefle = json.load(open(f'{MAPPING_DIR}/trefle_grounding.json'))\n",
+    "ncbi_ids_try = json.load(open(f'{MAPPING_DIR}/trefle_grounding.json'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "fd712049",
    "metadata": {
     "scrolled": true
@@ -54,7 +82,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/61/bn_r735d70z03hg56wh7hsg80000gn/T/ipykernel_13814/859058547.py:3: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "/var/folders/61/bn_r735d70z03hg56wh7hsg80000gn/T/ipykernel_22032/859058547.py:3: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "  trefle_df['scientific_name'] = trefle_df['scientific_name'].str.replace('?', '')\n"
      ]
     },
@@ -331,7 +359,7 @@
        "1  https://en.wikipedia.org/wiki/Abies bracteata  ncbitaxon:66168  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "88f00ec5",
    "metadata": {},
    "outputs": [
@@ -518,7 +546,7 @@
        "1          NaN  ncbitaxon:13467  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "94cba4f5",
    "metadata": {},
    "outputs": [
@@ -548,7 +576,7 @@
        "(1343003, 30)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "538319d0",
    "metadata": {},
    "outputs": [
@@ -627,15 +655,16 @@
        "1  ncbitaxon:3369  Cryptomeria japonica  mondo:0005087    bern2  10067319_8"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "collapsed_plant_disease_df = pd.read_csv(\n",
-    "    f'{DATA_DIR}/processed/plant_disease_collapsed.tsv',\n",
+    "    f'{DATA_DIR}/processed/plant_disease_collapsed.tsv.gz',\n",
     "    sep='\\t',\n",
+    "    compression='gzip',\n",
     "    low_memory=False\n",
     ")\n",
     "collapsed_plant_disease_df.head(2)"
@@ -643,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f1c0f1eb",
    "metadata": {},
    "outputs": [],
@@ -653,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "028a3d73",
    "metadata": {},
    "outputs": [],
@@ -663,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "fab3b75a",
    "metadata": {},
    "outputs": [],
@@ -681,28 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "8ab22091",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib_venn import venn3_unweighted"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
-   "id": "dbba6246",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "id": "b2a65882",
    "metadata": {},
    "outputs": [
@@ -727,13 +735,13 @@
     ")\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig(f'{DATA_DIR}/figures/supplemntary_figure_3.png', bbox_inches='tight')\n",
+    "plt.savefig(f'{DATA_DIR}/figures/supplementary_figure_2.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "adf3f1c7",
    "metadata": {},
    "outputs": [
@@ -743,7 +751,7 @@
        "(4726, 5636)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "acb2b139",
    "metadata": {},
    "outputs": [
@@ -765,7 +773,7 @@
        "(1302, 5636)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "a07079d9",
    "metadata": {},
    "outputs": [
@@ -787,7 +795,7 @@
        "910"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "dd1b0fa8",
    "metadata": {},
    "outputs": [
@@ -809,7 +817,7 @@
        "4334"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "55247134",
    "metadata": {},
    "outputs": [
@@ -831,7 +839,7 @@
        "910"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "85423b17",
    "metadata": {},
    "outputs": [
@@ -854,7 +862,7 @@
        "4726"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
