--- a/notebooks/3_2_geography_influence.ipynb
+++ b/notebooks/3_2_geography_influence.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6bb380d2",
    "metadata": {},
    "source": [
     "# Investigating the correlation between plant pairs (related by genus) and their geolocation \n",
@@ -13,7 +12,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1ee379a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +35,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2db03b2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +44,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e5ca790c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +54,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "70d00c20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +62,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91bdd4f8",
    "metadata": {},
    "source": [
     "### Load plant-disease evidences"
@@ -76,21 +70,20 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "88574ef4",
    "metadata": {},
    "outputs": [],
    "source": [
     "literature_pairs = pd.read_csv(\n",
     "    f'{DATA_DIR}/literature_based_correlation_data.tsv.gz',\n",
     "    compression='gzip',\n",
-    "    sep='\\t'\n",
+    "    sep='\\t',\n",
+    "    usecols=['plant_1', 'plant_2', 'pair_type', 'pearson_coefficient'],\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d83f4d19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +93,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "747d4409",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +115,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71321d5e",
    "metadata": {},
    "source": [
     "### Loading plant location data"
@@ -132,7 +123,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9f5bd2cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +132,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fc36494d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +145,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "28a57c37",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +231,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0ec43fb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +247,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e94c6745",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +267,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9423130e",
    "metadata": {},
    "source": [
     "### Create location dictionary"
@@ -290,7 +275,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3d3b9956",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +313,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36427347",
    "metadata": {},
    "source": [
     "The locations that have been skipped in the previous step correspond to Islands."
@@ -337,7 +320,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "244248b8",
    "metadata": {},
    "source": [
     "### Correlation plot"
@@ -346,7 +328,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ed25fb7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +344,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c1daf08e",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +381,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d44cd7b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +390,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "71283fa5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +400,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ce1e6a18",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +475,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b7f2d7f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -506,7 +482,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -520,7 +496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
