Remove old notebooks

--- a/notebooks/x_phylogenetic_tree_use_case.ipynb
+++ b/notebooks/x_phylogenetic_tree_use_case.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "0826c4d6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -21,7 +25,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "4d9384eb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from matplotlib.pyplot import figure\n",
@@ -37,7 +45,11 @@
   {
    "cell_type": "markdown",
    "id": "668e07d8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Load data"
    ]
@@ -46,7 +58,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "5423f706",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "DATA_DIR = '../data/processed'"
@@ -56,7 +72,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "6ab0b81d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -150,7 +170,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "f0069801",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -365,7 +389,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "dd8888c9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "plants = plant_disease_data.columns.tolist()"
@@ -375,7 +403,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "c6819f9f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import ast"
@@ -385,7 +417,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "40c685c6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -410,7 +446,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "7fd64e37",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1431,7 +1471,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "7d5108a5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1459,7 +1503,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "4e872d64",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1483,7 +1531,11 @@
   {
    "cell_type": "raw",
    "id": "bf14c9ac",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% raw\n"
+    }
+   },
    "source": [
     "### Counts for each disease\n",
     "for i in disease_areas_of_interest:\n",
@@ -1497,7 +1549,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "a927ffff",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "disease_areas_of_interest = [\n",
@@ -1530,7 +1586,11 @@
   {
    "cell_type": "markdown",
    "id": "0f287579",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Selection inflamtory diseases"
    ]
@@ -1539,7 +1599,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "d3dcd3c7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1562,7 +1626,11 @@
   {
    "cell_type": "raw",
    "id": "70703ef7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% raw\n"
+    }
+   },
    "source": [
     "all_plants = plant_disease_data[\n",
     "    plant_disease_data['disease_curie'].isin(['mondo:0005046', 'mondo:0021166'])\n",
@@ -1573,7 +1641,11 @@
   {
    "cell_type": "raw",
    "id": "96271f13",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% raw\n"
+    }
+   },
    "source": [
     "plant_naming_dict = defaultdict(str)\n",
     "\n",
@@ -1592,7 +1664,11 @@
   {
    "cell_type": "markdown",
    "id": "5eb88172",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Get lineage of each plant from NCBITaxon"
    ]
@@ -1601,7 +1677,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "c9f8d45a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "ncbi = NCBITaxa()"
@@ -1610,7 +1690,11 @@
   {
    "cell_type": "markdown",
    "id": "ab96171d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Generate Newick tree format"
    ]
@@ -1619,7 +1703,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "41c540d9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def newickify(node_to_children, root_node) -> str:\n",
@@ -1652,7 +1740,11 @@
   {
    "cell_type": "raw",
    "id": "9fc0ae7a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% raw\n"
+    }
+   },
    "source": [
     "lineage_dict = defaultdict(dict)\n",
     "\n",
@@ -1684,7 +1776,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "3877d94f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1716,7 +1812,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "bf27e8c9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "string = newickify(lineage_dict, root_node=1)"
@@ -1726,7 +1826,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "a6627893",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "biophylo_tree = Phylo.read(StringIO(string), \"newick\")"
@@ -1735,7 +1839,11 @@
   {
    "cell_type": "markdown",
    "id": "30d3c4f2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Visualizing tree\n"
    ]
@@ -1744,7 +1852,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "b02b961d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1815,7 +1927,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e285d0e3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
