--- a/notebooks/3_2_geography_influence.ipynb
+++ b/notebooks/3_2_geography_influence.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "dac1980a",
    "metadata": {},
    "source": [
     "# Investigating the correlation between plant pairs (related by genus) and their geolocation \n",
@@ -12,17 +13,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/danieldomingo/anaconda3/lib/python3.8/site-packages/pandas/core/computation/expressions.py:20: UserWarning: Pandas requires version '2.7.3' or newer of 'numexpr' (version '2.7.1' currently installed).\n",
-      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n"
-     ]
+   "id": "e1a90532",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-18T03:49:27.486318Z",
+     "start_time": "2023-02-18T03:49:26.278651Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import logging\n",
     "from collections import defaultdict\n",
@@ -44,6 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "9b884b11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "ac5cb634",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,6 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "b8a43645",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +72,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "85774cbd",
    "metadata": {},
    "source": [
     "### Load plant-disease evidences"
@@ -79,6 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "20d13d79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,6 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "62232c2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,6 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "1897d2e4",
    "metadata": {},
    "outputs": [
     {
@@ -124,6 +129,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a33b45c3",
    "metadata": {},
    "source": [
     "### Loading plant location data"
@@ -132,6 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "9d9b0a79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,6 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "900268e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,6 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "c670b436",
    "metadata": {},
    "outputs": [
     {
@@ -240,6 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "c20450bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,6 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "597667d8",
    "metadata": {},
    "outputs": [
     {
@@ -276,6 +287,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8f5c44ad",
    "metadata": {},
    "source": [
     "### Create location dictionary"
@@ -284,6 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "59fcdcaf",
    "metadata": {},
    "outputs": [
     {
@@ -322,6 +335,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1f974bce",
    "metadata": {},
    "source": [
     "The locations that have been skipped in the previous step correspond to Islands."
@@ -329,6 +343,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9f413d20",
    "metadata": {},
    "source": [
     "### Correlation plot"
@@ -337,6 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "4bce5161",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,6 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "3f0f8a1d",
    "metadata": {},
    "outputs": [
     {
@@ -390,6 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "dbcd0ba8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,6 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "dd4d8c8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,6 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "c7b7bd21",
    "metadata": {},
    "outputs": [
     {
@@ -484,6 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "707801f9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -491,7 +512,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -505,7 +526,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.16"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
