Add citation and fix path for country codes

--- a/notebooks/2_4_plant_distribution.ipynb
+++ b/notebooks/2_4_plant_distribution.ipynb
@@ -105,9 +105,9 @@
     }
    ],
    "source": [
-    "geographic_df = pd.read_csv(f'{DATA_DIR}/plant_geolocation.tsv', sep='\\t')\n",
+    "geographic_df = pd.read_csv(f'{DATA_DIR}/plant_geolocation.tsv.gz', sep='\\t', compression='gzip')\n",
     "\n",
-    "# Dropping contries not mapped\n",
+    "# Dropping countries not mapped\n",
     "geographic_df = geographic_df[~geographic_df['Country'].isin(['-'])]\n",
     "\n",
     "geographic_df.head(2)"
@@ -128,7 +128,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "country_code_map = get_country_codes()"
+    "country_code_map = pd.read_csv(\n",
+    "    '../data/mapping/country_codes.tsv',\n",
+    "    sep='\\t',\n",
+    "    index_col='Country'\n",
+    ").to_dict()['code']"
    ]
   },
   {
