Add comment about try db

--- a/notebooks/2_4_geodatabase_overlap.ipynb
+++ b/notebooks/2_4_geodatabase_overlap.ipynb
@@ -552,6 +552,7 @@
     }
    ],
    "source": [
+    "# This database is not public and cannot be shared externally without author permission. Please download the dump from the original resource\n",
     "try_df = pd.read_csv(\n",
     "    '/Users/yojana/Downloads/23255_08112022232657/23255.txt',\n",
     "    sep='\\t', \n",
